# Linux_system

soundCtrl/: CMakeLists.txt  build.sh  filename  main.c
soundCtrl/drawModule/: CMakeLists.txt  drawModule.c  drawModule.h
soundCtrl/include/: system.h  type.h
soundCtrl/messageModule/: CMakeLists.txt  messageModule.c  messageModule.h
soundCtrl/soundModule/: CMakeLists.txt  readSound.h  soundModule.c  soundModule.h
soundCtrl/soundModule/recoding/: CMakeLists.txt  writeSound.c  writeSound.h
soundCtrl_Process/: .gitignore  build_all.sh
soundCtrl_Process/include/: system.h  type.h
soundCtrl_Process/inputModule/: CMakeLists.txt  inputModule.c  inputModule.h
soundCtrl_Process/launcherModule/: CMakeLists.txt  launcher.c  launcher.h
soundCtrl_Process/modulationModule/: CMakeLists.txt  modulationModule.c  modulationModule.h
soundCtrl_Process/outputModule/: CMakeLists.txt  outputModule.c  outputModule.h
soundCtrl_Process/viewerModule/: CMakeLists.txt  viewerModule.c  viewerModule.h
soundCtrl_Process/viewerModule/controlModule/: CMakeLists.txt  controlModule.c  controlModule.h
unix_study/: .gitignore
unix_study/NamedPipe_client/: CMakeLists.txt  main.c  pipe.h
unix_study/NamedPipe_sever/: CMakeLists.txt  main.c
unix_study/Pipe/: CMakeLists.txt  main.c  pipe.h
unix_study/ProcessControl/: CMakeLists.txt  main.c  process.c  process.h  readme.md  wait.c
unix_study/env/: CMakeLists.txt  env.h  envControl.c  main.c
unix_study/intetvalAlarm/: CMakeLists.txt  IntervalAlarm.h  main.c
unix_study/messageQueue/: CMakeLists.txt  main.c  messageQueueControll.c  messageRecv.c  messageSend.c  msg.h
unix_study/mmap/: CMakeLists.txt  log  mMapping.h  main.c  mappingfunc.c
unix_study/mmap_fork/: CMakeLists.txt  mMapping.h  main.c
unix_study/processTime/: CMakeLists.txt  readme.md  timeCheck.c
unix_study/semaphorePOSIX/: CMakelists.txt  semaphorePOSIX.c
unix_study/semaphoreSYSV/: semaphoreSYSV.c  semaphoreSYSV.h  semaphoreSYSVfunc.c
unix_study/sharedMemory/: CMakeLists.txt  main.c  sharedFuntion.h  sheredFunction.c
unix_study/sharedMemory_client/: CMakeLists.txt  client.c  client.h
unix_study/sharedMemory_server/: CMakeLists.txt  server.c  server.h
unix_study/sharedMemory_server/include/: type.h
unix_study/signal/: CMakeLists.txt  log.txt  main.c  readme.md  signalControl.c
unix_study/signal_PrintCause/: CMakeLists.txt  main.c  signalControl.h
unix_study/signal_alarm/: CMakeLists.txt  main.c
